dashboard, detail routing

--- a/planner2/public/plan_detail.component.html
+++ b/planner2/public/plan_detail.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="plan">
 <h1>{{plan.title}}</h1>
 <h2>Ends at: {{plan.end}}</h2>
+<h3><label>Id:</label> {{plan.id}}</h3>
 </div>
 <button (click)="goBack()">Back</button>
