--- a/planner2/public/plan_detail.component.html
+++ b/planner2/public/plan_detail.component.html
@@ -2,5 +2,6 @@
 <h1>{{plan.title}}</h1>
 <h2>Ends at: {{plan.end}}</h2>
 <h3><label>Id:</label> {{plan.id}}</h3>
+<input [(ngModel)]="plan.title" placeholder="title">
 </div>
 <button (click)="goBack()">Back</button>
