--- a/planner2/public/plan_detail.component.html
+++ b/planner2/public/plan_detail.component.html
@@ -5,3 +5,5 @@
 <input [(ngModel)]="plan.title" placeholder="title">
 </div>
 <button (click)="goBack()">Back</button>
+<hr>
+<button (click)="goPrint()">Print</button>
