--- a/planner2/public/css/planner.component.css
+++ b/planner2/public/css/planner.component.css
@@ -6,6 +6,33 @@ h2 {
 	font-color: blue;
 }
 
+label {
+	display: inline-block;
+	width: 3em;
+	margin: 0.5em 0;
+	color: #607D8B;
+	font-weight: bold;
+}
+
+input {
+	height: 2em;
+	font-size: 1em;
+	padding-left: .4em;
+}
+
 #lister {
 	font-color: red;
+}
+
+button {
+  margin-top: 20px;
+  font-family: Arial;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer; cursor: hand;
+}
+button:hover {
+  background-color: #cfd8dc;
 }
