--- a/planner2/app/public/views/planner.html
+++ b/planner2/app/public/views/planner.html
@@ -25,6 +25,8 @@ System.import('app/main')
 	.then(null, console.error.bind(console));
 </script>
 
+<link rel="stylesheet" href="../styles.css">
+
 </head>
 <body>
 
