--- a/angular2/angular2-forms/app/hero_form.component.html
+++ b/angular2/angular2-forms/app/hero_form.component.html
@@ -4,18 +4,27 @@
     <form>
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" class="form-control" [(ngModel)]="model.name">
+        <input type="text" class="form-control" 
+        #spy
+        [(ngModel)]="model.name" 
+        ngControl="name" #name="ngForm" required>
+        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+          Name is required
+        </div>
+        <hr>
+        <br>#spy local var: {{spy.className}}
       </div>
       <div class="form-group">
         <label for="power">Power</label>
-        <select class="form-control">
+        <select class="form-control" [(ngModel)]="model.power" required>
           <option *ngFor="#pow of powers" [value]="pow">{{pow}}</option>
         </select>
       </div>
       <div class="form-group">
         <label for="alterEgo">Alter Ego</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" [(ngModel)]="model.alterego">
       </div>
+      <button type="button" class="btn btn-default" (click)="newHero()">New Hero</button>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
 </div>
