--- a/angular2/angular2-forms/app/hero_form.component.html
+++ b/angular2/angular2-forms/app/hero_form.component.html
@@ -1,7 +1,7 @@
-{{diagnostic}}
 <div class="container">
+  <div [hidden]="submitted">
     <h1>Hero Form</h1>
-    <form>
+    <form *ngIf="active" (ngSubmit)="onSubmit()" #heroForm="ngForm">
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" 
@@ -25,6 +25,24 @@
         <input type="text" class="form-control" [(ngModel)]="model.alterego">
       </div>
       <button type="button" class="btn btn-default" (click)="newHero()">New Hero</button>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-default" [disabled]="!heroForm.form.valid">Submit</button>
     </form>
+  </div>
+      <div [hidden]="!submitted">
+      <h2>You submitted the following:</h2>
+      <div class="row">
+        <div class="col-xs-3">Name</div>
+        <div class="col-xs-9  pull-left">{{ model.name }}</div>
+      </div>
+      <div class="row">
+        <div class="col-xs-3">Alter Ego</div>
+        <div class="col-xs-9 pull-left">{{ model.alterEgo }}</div>
+      </div>
+      <div class="row">
+        <div class="col-xs-3">Power</div>
+        <div class="col-xs-9 pull-left">{{ model.power }}</div>
+      </div>
+      <br>
+      <button class="btn btn-default" (click)="submitted=false">Edit</button>
+    </div>
 </div>
