--- a/angular2/angular2-forms/app/hero_form.component.html
+++ b/angular2/angular2-forms/app/hero_form.component.html
@@ -27,7 +27,8 @@
       </div>
       <div class="form-group">
         <label for="alterEgo">Alter Ego</label>
-        <input type="text" class="form-control" [(ngModel)]="model.alterego">
+        <input type="text" class="form-control" [(ngModel)]="model.alterego"
+        ngControl="alterego">
       </div>
       <button type="button" class="btn btn-default" (click)="newHero()">New Hero</button>
       <button type="submit" class="btn btn-default" [disabled]="!heroForm.form.valid">Submit</button>
@@ -41,7 +42,7 @@
       </div>
       <div class="row">
         <div class="col-xs-3">Alter Ego</div>
-        <div class="col-xs-9 pull-left">{{ model.alterEgo }}</div>
+        <div class="col-xs-9 pull-left">{{ model.alterego }}</div>
       </div>
       <div class="row">
         <div class="col-xs-3">Power</div>
