--- a/planner2/app/public/views/app.component.html
+++ b/planner2/app/public/views/app.component.html
@@ -3,5 +3,6 @@
 <nav>
 <a [routerLink]="['Dashboard']">Dashboard</a>
 <a [routerLink]="['Plans']">Plans</a>
+<a [routerLink]="['TestBoard']">Test</a>
 </nav>
 <router-outlet></router-outlet>
