observable map, get to component

--- a/planner2/app/public/views/planner.html
+++ b/planner2/app/public/views/planner.html
@@ -15,9 +15,15 @@
 <!-- Configure System.js -->
 <script>
 System.config({
+	map: {
+		'rxjs': 'node_modules/rxjs'
+	},
 	packages: {
 		app: {
 			format: 'register',
+			defaultExtension: 'js'
+		},
+		'rxjs': {
 			defaultExtension: 'js'
 		}
 	}
