node gcal API call -> event.json -> plan service promise -> component private var -> view async iteration hooked up

--- a/planner2/app/public/views/testboard.component.html
+++ b/planner2/app/public/views/testboard.component.html
@@ -4,6 +4,6 @@
 	<div (click)="ngOnInit()">Click Test</div>
 	<br>
 	<div *ngFor="#newplan of newplans | async">
-	<b (click)="newDetails(newplan)">{{newplan.title}}</b>
+	<b (click)="newDetails(newplan)">{{newplan.task}}</b>
 	</div>
 </div>
