--- a/planner2/app/public/views/testboard.component.html
+++ b/planner2/app/public/views/testboard.component.html
@@ -4,6 +4,7 @@
 	<div (click)="ngOnInit()">Click Test</div>
 	<br>
 	<div *ngFor="#newplan of newplans | async">
+	<h3>{{newplan.date}}</h3>
 	<b (click)="newDetails(newplan)">{{newplan.task}}</b>
 	</div>
 </div>
