convert ISO to UTC for start/end times for angular DatePipe (wont do iso strings)

--- a/planner2/app/public/views/testboard.component.html
+++ b/planner2/app/public/views/testboard.component.html
@@ -4,8 +4,8 @@
 	<div (click)="ngOnInit()">Click Test</div>
 	<br>
 	<div *ngFor="#newplan of newplans | async">
-	<h3>{{newplan.start}}</h3>
+	<h3>{{newplan.start | date:'MM/dd/yy'}}</h3>
 	<b (click)="newDetails(newplan)">{{newplan.task}}</b>
-	<h4>{{newplan.start}} - {{newplan.end}}</h4>
+	<h4>{{newplan.start | date:'shortTime' }} - {{newplan.end | date:'shortTime'}}</h4>
 	</div>
 </div>
