--- a/planner2/app/public/views/testboard.component.html
+++ b/planner2/app/public/views/testboard.component.html
@@ -8,4 +8,5 @@
 	<b (click)="newDetails(newplan)">{{newplan.task}}</b>
 	<h4>{{newplan.start | date:'shortTime' }} - {{newplan.end | date:'shortTime'}}</h4>
 	</div>
+	<!-- <div>test: {{new Date('2016-03-16T12:00:00-04:00') | date}}</div> -->
 </div>
