seperate google oauth files, put on remote server

--- a/planner2/app/public/views/app.component.html
+++ b/planner2/app/public/views/app.component.html
@@ -3,6 +3,7 @@
 <nav>
 <a [routerLink]="['Dashboard']">Dashboard</a>
 <a [routerLink]="['Plans']">Plans</a>
-<a [routerLink]="['TestBoard']">Test</a>
+<a [routerLink]="['TestBoard']">Google Calendar Test</a>
+<a href="['Blog']">Blog Test</a>
 </nav>
 <router-outlet></router-outlet>
