added website php scripts, node deployment next

--- a/planner2/app/public/views/app.component.html
+++ b/planner2/app/public/views/app.component.html
@@ -4,6 +4,6 @@
 <a [routerLink]="['Dashboard']">Dashboard</a>
 <a [routerLink]="['Plans']">Plans</a>
 <a [routerLink]="['TestBoard']">Google Calendar Test</a>
-<a href="['Blog']">Blog Test</a>
+<a [routerLink]="['Login']">Login</a>
 </nav>
 <router-outlet></router-outlet>
