--- a/angular2/angular2-forms/app/hero-form.component.html
+++ b/angular2/angular2-forms/app/hero-form.component.html
@@ -1,4 +1,4 @@
-<!--{{diagnostic}}
+{{diagnostic}}
 <div class="container">
     <h1>Hero Form</h1>
     <form>
@@ -18,5 +18,4 @@
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
-</div> invalid string??-->
-<b>Test 9</b>
+</div>
