--- a/planner2/app/public/views/login.component.html
+++ b/planner2/app/public/views/login.component.html
@@ -1,9 +1,15 @@
-<h1>{{title}}</h1>
-<hr>
-<h2>Login</h2>
-<br>
-<b><label>name</label></b>
-<input #myname name="name" value="1" id="name" placeholder="name">
-<b><label>Password</label></b>
-<input #mypassword name="password" value="2" id="password" placeholder="password">
-<button type="button" (click)="validate(myname.value, mypassword.value)">Submit</button>
+{{diagnostic}}
+<div class="container">
+    <h1>Login</h1>
+    <form>
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input #username type="text" id="username" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input #password type="text" id="password" class="form-control">
+      </div>
+      <button type="submit" (click)="validate(username.value, password.value)" class="btn btn-default">Submit</button>
+    </form>
+</div>
