--- a/planner2/styles.css
+++ b/planner2/styles.css
@@ -1,5 +1,35 @@
-h2 { color: #444; font-weight: lighter; }
-body { margin: 2em; }
-body, input[text], button { color: #888; font-family: Cambria, Georgia; }
-button { padding: 0.2em; font-size: 14px}
-* { font-family: Arial; }
+h2 { 
+	color: #444; 
+	font-weight: lighter; 
+}
+body { 
+	margin: 1em; 
+}
+body, input[text], button { 
+	color: #888; 
+	font-family: Cambria, Georgia; 
+}
+button { 
+	padding: 0.2em; 
+	font-size: 14px;
+}
+* { 
+	font-family: Arial; 
+}
+
+/* My CSS additions */
+
+#actbox {
+	border: 0.1em solid grey;
+	box-shadow: 0.1em 0.1em 0.1em #999;
+}
+
+#actdate {
+	color: black;
+	font-size: 20px;
+}
+
+#acttask {
+	color: blue;
+
+}
