--- a/nodeauth/scotch/views/profile.ejs
+++ b/nodeauth/scotch/views/profile.ejs
@@ -19,6 +19,21 @@
 
     <div class="row">
 
+        <!-- TWITTER INFORMATION -->
+        <div class="col-sm-6">
+            <div class="well">
+                <h3 class="text-info"><span class="fa fa-twitter"></span> Twitter</h3>
+
+                    <p>
+                        <strong>id</strong>: <%= user.twitter.id %><br>
+                        <strong>token</strong>: <%= user.twitter.token %><br>
+                        <strong>username</strong>: <%= user.twitter.username %><br>
+                        <strong>displayName</strong>: <%= user.twitter.displayName %>
+                    </p>
+
+            </div>
+        </div>
+
     <!-- FACEBOOK INFORMATION -->
         <div class="col-sm-6">
             <div class="well">
