--- a/angular2/angular2-forms/app/hero_form.component.html
+++ b/angular2/angular2-forms/app/hero_form.component.html
@@ -16,14 +16,16 @@
       </div>
       <div class="form-group">
         <label for="power">Hero Power</label>
-        <select class="form-control" required
+        <select class="form-control"
+        (change)="onChange($event.target.value)"
           [(ngModel)]="model.power"
-            ngControl="power" #power="ngForm" >
-          <option *ngFor="#p of powers" [value]="p">{{p}}</option>
+            ngControl="power" #power="ngForm" required>
+          <option *ngFor="#p of powers" #spy [value]="p">{{p}}</option>
         </select>
         <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
           Power is required
         </div>
+        <br>#spy local var: {{spy.className}}
       </div>
       <div class="form-group">
         <label for="alterEgo">Alter Ego</label>
