--- a/angular2/angular2-forms/app/hero-form.component.html
+++ b/angular2/angular2-forms/app/hero-form.component.html
@@ -1,5 +1,4 @@
-{{diagnostic}}
-<div class="container">
+<div *ngIf="active" class="container">
     <h1>Hero Form</h1>
     <form>
       <div class="form-group">
@@ -16,6 +15,7 @@
         <label for="alterEgo">Alter Ego</label>
         <input type="text" class="form-control">
       </div>
+      <div id="test">{{test}}</div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
 </div>
